Stop the review date wrapping #488

--- a/src/sass/_article-feed.scss
+++ b/src/sass/_article-feed.scss
@@ -69,6 +69,7 @@
   font-family: Ubuntu, sans-serif;
   color: settings.$colour-grey-two;
   margin-left: auto;
+  flex-shrink: 0;
 }
 
 .article-feed__item__title,
